--- a/src/App.css
+++ b/src/App.css
@@ -32,17 +32,16 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
-  background-color: #f5f5f7;
-  color: black;
+  background-color: #181818;
+  color: white;
   height: 100%;
   width: 100%;
   position: absolute;
 }
 
 #nav {
-  color: black;
   padding-top: 0.6rem;
-  padding-bottom: 0.6em;
+  padding-bottom: 0.4em;
   font-size: 1.1rem;
   top: 0;
   z-index: 1000;
@@ -59,35 +58,25 @@ body {
 .nav-li {
   margin-left: 2rem;
   transition: ease-in-out 0.3s;
+  text-decoration: none;
+  color: white;
 }
 
 .nav-li:hover {
-  color: #ff5017;
-  text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 0 1px rgba(255, 255, 255, 99);
   cursor: pointer;
 }
 
 .nav-logo {
   width: 50px;
   height: 52px;
-  filter: invert(1);
 }
 
 .main {
   width: 100%;
-  height: 92%;
-  position: absolute;
   align-content: center;
+  position: absolute;
 }
-
-/* .swiper-slide,
-.swiper-slide-next,
-.swiper-slide-prev,
-.swiper-slide-active {
-  margin-bottom: 5%;
-  margin-top: 3%;
-  height: 100%;
-} */
 
 .slider-container {
   width: 100%;
@@ -100,52 +89,46 @@ body {
 }
 
 .slide-item {
-  width: 70%;
+  width: 100%;
   transition: ease-in-out 0.3s;
-  margin-bottom: 90px;
-  margin-top: 70px;
+  margin-top: 4%;
 }
 
 .box {
-  border-radius: 5px;
-  transition: ease-in-out 0.3s;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-.box:hover {
-  transform: scale(1.01);
-}
-
-.slide-p {
-  color: red;
-  font-size: 1.2rem;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 50);
 }
 
 .swiper-button-prev,
 .swiper-button-next {
-  background-color: rgba(0, 0, 0, 0.15);
+  background-color: #181818;
   border-radius: 5px;
   padding: 15px;
-  color: black !important;
+  color: white !important;
   transition: ease-in-out 0.3s;
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
   transform: scale(1.1);
-  color: #ff5017 !important;
 }
 
-.swiper-pagination-bullet {
-  background-color: black !important;
-  transition: ease-in-out 0.3s;
+.copy {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  color: white;
+  background-color: #181818;
+  z-index: 100;
 }
 
-.swiper-pagination-bullet:hover {
-  background-color: #ff5017 !important;
-  transition: ease-in-out 0.3s;
+.home {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
