--- a/src/components/Models.css
+++ b/src/components/Models.css
@@ -1,21 +1,45 @@
+.models {
+  position: relative;
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #181818;
+}
+
 .slider-container {
   width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.slider-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .slide-title {
   position: absolute;
   left: 50%;
-  transform: translate(-50%);
+  transform: translateX(-50%);
+  width: auto;
+  max-width: 90%;
+  z-index: 1;
 }
 
 .slide-item {
   width: 100%;
+  height: auto;
   transition: ease-in-out 0.3s;
   margin-top: 4%;
 }
 
 .box {
-  box-shadow: 0 0 50px rgba(0, 0, 0, 9);
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.9);
 }
 
 .swiper-button-prev,
@@ -25,8 +49,6 @@
   padding: 15px;
   color: white !important;
   transition: ease-in-out 0.3s;
-  margin-left: 3%;
-  margin-right: 3%;
 }
 
 .swiper-button-prev:hover,
