--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,30 @@ body {
   background-color: #181818;
   z-index: 100;
 }
+
+.fade-enter {
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 500ms, transform 500ms;
+}
+
+.fade-exit {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 500ms, transform 500ms;
+}
+
+.App .main {
+  position: relative;
+  overflow: hidden;
+}
