--- a/src/components/About.css
+++ b/src/components/About.css
@@ -29,7 +29,13 @@
   padding: 25px;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 10px;
+  margin-top: 1rem;
   margin-bottom: 2rem;
+  transition: transform 0.5s;
+}
+
+.content:hover {
+  transform: scale(1.03);
 }
 
 .content h1 {
