--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -22,7 +22,8 @@
 
 .contact-info {
   flex: 1;
-  margin: 20px;
+  margin: 15px;
+  margin-bottom: 3%;
 }
 
 .btn2 {
@@ -87,4 +88,13 @@ button {
   text-decoration: none;
   border: none;
   background-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: goldenrod;
+}
+
+.contact-me {
+  font-size: 1.2rem;
 }
