--- a/src/components/Models.css
+++ b/src/components/Models.css
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+
   background-color: #181818;
 }
 
@@ -17,9 +17,8 @@
 }
 
 .slider-wrapper {
-  position: relative;
+  position: absolute;
   width: 100%;
-  height: 100%;
 }
 
 .slide-title {
@@ -33,11 +32,13 @@
 
 .slide-item {
   width: 100%;
-  height: auto;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
   transition: ease-in-out 0.3s;
   margin-top: 4%;
   object-fit: cover;
-  min-height: 740px;
+  min-height: 735px;
 }
 
 .box {
