--- a/src/components/Models.css
+++ b/src/components/Models.css
@@ -4,7 +4,6 @@
   width: 100%;
   display: flex;
   justify-content: center;
-
   background-color: #181818;
 }
 
@@ -57,4 +56,15 @@
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
   transform: scale(1.1);
+}
+
+.desc {
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 50px;
+  margin-left: 50px;
+  font-size: 1.1rem;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  color: white;
 }
