--- a/src/App.css
+++ b/src/App.css
@@ -116,3 +116,41 @@ body {
   position: relative;
   overflow: hidden;
 }
+
+@media (max-width: 1300px) {
+  #nav {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    font-size: 0.9rem;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    position: relative;
+  }
+
+  .nav-li {
+    margin-left: 0;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .nav-logo {
+    width: 40px;
+    height: 42px;
+  }
+
+  .copy {
+    font-size: 0.7rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    color: white;
+    background-color: #181818;
+    z-index: 100;
+  }
+}
