--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -84,3 +84,58 @@
 .modal-content button:hover {
   background-color: #333;
 }
+
+@media (max-width: 1300px) {
+  .home {
+    height: 90vh;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .text {
+    left: 0;
+    right: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+  }
+
+  .home-title {
+    font-size: 1.8rem;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  }
+  .home-sub {
+    font-size: 0.9rem;
+    margin-top: 1rem;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  }
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  .modal-content {
+    background: white;
+    color: #181818;
+    padding: 15px;
+    border-radius: 5px;
+    text-align: center;
+    max-width: 350px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  }
+
+  .modal-content button {
+    padding: 5px 15px;
+    cursor: pointer;
+    margin-top: 15px;
+  }
+}
