--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -14,7 +14,6 @@
   background-image: url("../assets/images/home1.jpg");
   background-size: cover;
   background-position: center;
-  z-index: -1;
 }
 
 .text {
@@ -121,15 +120,16 @@
     justify-content: center;
     align-items: center;
     z-index: 9999;
+    font-size: 0.8rem;
   }
 
   .modal-content {
     background: white;
     color: #181818;
-    padding: 15px;
+    padding: 10px;
     border-radius: 5px;
     text-align: center;
-    max-width: 350px;
+    max-width: 300px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   }
 
