--- a/src/components/About.css
+++ b/src/components/About.css
@@ -43,11 +43,12 @@
 
 @media (max-width: 1300px) {
   .about {
-    position: relative;
     display: block;
     overflow: hidden;
     align-items: center;
     align-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .content {
