--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -105,6 +105,8 @@ a {
     margin: 5px;
     margin-bottom: 0;
     margin-top: 0;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   .btn2 {
