--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,11 @@ body {
   z-index: 100;
 }
 
+.copy p {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .fade-enter {
   opacity: 0;
   transform: translateY(20px);
