--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -102,11 +102,15 @@
   .home-title {
     font-size: 1.8rem;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    margin-left: 30px;
+    margin-right: 30px;
   }
   .home-sub {
     font-size: 0.9rem;
     margin-top: 1rem;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   .modal-overlay {
@@ -131,6 +135,8 @@
     text-align: center;
     max-width: 300px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .modal-content button {
