--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,35 +1,22 @@
 .about {
-  position: relative;
   height: 90vh;
-  display: block;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  align-content: center;
-}
-
-.background-image-about {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   background-image: url("../assets/images/about.jpg");
   background-size: cover;
   background-position: center;
-  filter: blur(10px);
+
 }
 
 .content {
-  margin: auto;
-  max-width: 50em;
-  position: relative;
-  color: white;
+  max-width: 50%;
   text-align: justify;
   padding: 25px;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 5px;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
+  margin: 1rem;
   transition: transform 0.5s;
 }
 
@@ -42,25 +29,18 @@
 }
 
 @media (max-width: 1300px) {
-  .about {
-    display: block;
-    overflow: hidden;
-    align-items: center;
-    align-content: center;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
 
   .content {
-    max-width: 300px;
-    text-align: center;
-    padding: 15px;
+    max-width: 80%;
+    padding: 20px;
+    margin: 0.5rem;
+    transition: transform 0.5s;
     font-size: 0.7rem;
-    margin-top: 0.2rem;
-    margin-bottom: 1rem;
   }
 
   .content h1 {
+    font-size: 1.2rem;
     padding-bottom: 5px;
   }
+
 }
