--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,47 +1,27 @@
 .contact {
-  position: relative;
   height: 90vh;
-  display: block;
-  overflow: hidden;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  align-content: center;
-}
-
-.background-image-contact {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  flex-direction: column;
   background-image: url("../assets/images/contact.jpg");
   background-size: cover;
   background-position: center;
-  filter: blur(10px);
-  z-index: -1;
 }
 
-.contact-info {
-  flex: 1;
-  margin: 15px;
-  margin-bottom: 3%;
-}
-
-.btn2 {
-  top: 0;
+.contact-button {
+  width: 90px;
   position: relative;
   display: inline-block;
   padding: 15px 30px;
   margin: 30px;
   border: 2px solid #fefefe;
-  text-transform: uppercase;
   color: #fefefe;
-  text-decoration: none;
-  font-weight: 600;
   font-size: 20px;
   transition: 0.3s;
 }
 
-.btn2::before {
+.contact-button::before {
   content: "";
   position: absolute;
   top: -2px;
@@ -53,7 +33,7 @@
   transform: scaleY(1);
 }
 
-.btn2::after {
+.contact-button::after {
   content: "";
   position: absolute;
   top: -2px;
@@ -65,29 +45,23 @@
   transform: scaleY(1);
 }
 
-.btn2:hover::before {
+.contact-button:hover::before {
   transform: translateY(-25px);
   height: 0;
 }
 
-.btn2:hover::after {
+.contact-button:hover::after {
   transform: scaleX(0);
   transition-delay: 0.15s;
 }
 
-.btn2:hover {
+.contact-button:hover {
   border: 2px solid #fefefe;
 }
 
-.btn2 span {
+.contact-button span {
   position: relative;
   z-index: 3;
-}
-
-button {
-  text-decoration: none;
-  border: none;
-  background-color: transparent;
 }
 
 a {
@@ -100,27 +74,20 @@ a {
 }
 
 @media (max-width: 1300px) {
-  .contact-info {
-    flex: 1;
-    margin: 5px;
-    margin-bottom: 0;
-    margin-top: 0;
-    margin-left: 30px;
-    margin-right: 30px;
-  }
 
-  .btn2 {
-    min-width: 110px;
-    padding: 10px 25px;
-    margin: 15px;
-    font-size: 16px;
-  }
-
-  .contact-me {
+  .contact h1 {
     font-size: 1rem;
   }
 
-  .contact h1 {
-    font-size: 1.4rem;
+  .contact-button {
+    padding: 10px 25px;
+    margin: 20px;
+    font-size: 15px;
+  }
+
+  .contact-me {
+    width: 300px;
+    text-align: center;
+    font-size: 12px;
   }
 }
