--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,53 +1,41 @@
 .home {
-  position: relative;
   height: 90vh;
   width: 100%;
   overflow: hidden;
-}
-
-.background-image-home {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   background-image: url("../assets/images/home1.jpg");
   background-size: cover;
   background-position: center;
+  display: flex;
 }
 
 .text {
-  position: absolute;
-  top: 50%;
-  left: 10%;
-  transform: translateY(-50%);
-  color: white;
-  text-align: left;
-  padding-bottom: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 12rem;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+
 }
 
 .home-title {
   font-size: 4rem;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  margin-bottom: 1rem;
 }
 
 .home-sub {
   font-size: 1.5rem;
-  margin-top: 1rem;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
 .modal-overlay {
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  z-index: 1001;
 }
 
 .modal-content {
@@ -66,14 +54,13 @@
 }
 
 .modal-content h2 {
-  margin-top: 0;
   margin-bottom: 10px;
 }
 
 .modal-content button {
   padding: 10px 20px;
-  background-color: #000;
-  color: #fff;
+  background-color: #181818;
+  color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -85,63 +72,32 @@
 }
 
 @media (max-width: 1300px) {
-  .home {
-    height: 90vh;
-    width: 100%;
-    overflow: hidden;
-  }
-
   .text {
-    left: 0;
-    right: 0;
-    width: 100%;
-    color: white;
     text-align: center;
+    margin: auto;
   }
 
   .home-title {
-    font-size: 1.8rem;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-    margin-left: 30px;
-    margin-right: 30px;
+    font-size: 2rem;
+    margin: 1rem 30px;
   }
+
   .home-sub {
-    font-size: 0.9rem;
-    margin-top: 1rem;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    font-size: 1rem;
     margin-left: 30px;
     margin-right: 30px;
   }
 
   .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
     font-size: 0.8rem;
   }
 
   .modal-content {
-    background: white;
-    color: #181818;
     padding: 10px;
-    border-radius: 5px;
-    text-align: center;
     max-width: 300px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-    margin-left: 20px;
-    margin-right: 20px;
   }
 
   .modal-content button {
     padding: 5px 15px;
-    cursor: pointer;
-    margin-top: 15px;
   }
 }
